--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Turkish Technnology Team Foundation (T3)
 sentence=Allows you to send a message to telegram via Deneyap Kart
 paragraph=*
 category=*
-url=https://github.com/pxsty0/deneyaptelegram
+url=https://github.com/pxsty0/deneyap.telegram
 architectures=*
