--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=Deneyap Telegram
 version=1.0.6
-author=mustafa_kok <pxsty@pxserv.net>
+author=mustafa_kok
 maintainer=Turkish Technnology Team Foundation (T3) <destek@deneyapkart.org>
 sentence=Allows you to send a message to telegram via Deneyap Kart
 paragraph=*
