--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=Deneyap Telegram
-version=1.0.6
+version=1.0.7
 author=mustafa_kok
-maintainer=Turkish Technnology Team Foundation (T3) <destek@deneyapkart.org>
-sentence=Allows you to send a message to telegram via Deneyap Kart
+maintainer=mustafa_kok
+sentence=Telegram Library for ESP32 / Deneyap Cards
 paragraph=*
 category=*
 url=https://github.com/pxsty0/deneyap.telegram
